# mprove-nova

./: .gitignore  ARTIFACT-EVALUATION.md  Cargo.toml  README.md  genlog.sh  genlog_all.sh  rust-toolchain.toml
examples/: nc.rs  pnc.rs  por.rs  rcg.rs
logs/: output_10.txt
logs/nc/: output_1000.txt  output_10000.txt  output_15000.txt  output_20000.txt  output_3000.txt  output_500.txt  output_5000.txt  output_7000.txt
logs/pnc/: output_10.txt  output_100.txt  output_1000.txt  output_10000.txt  output_15000.txt  output_2.txt  output_20000.txt  output_3000.txt  output_500.txt  output_5000.txt  output_7000.txt
logs/por/: output_1.txt  output_10.txt  output_100.txt  output_1000.txt  output_10000.txt  output_15000.txt  output_2.txt  output_20000.txt  output_3.txt  output_3000.txt  output_500.txt  output_5000.txt  output_7000.txt
logs/rcg/: output_1000.txt  output_10000.txt  output_15000.txt  output_20000.txt  output_3000.txt  output_500.txt  output_5000.txt  output_7000.txt
logs/zkpor/: output_2.txt
src/: lib.rs
src/gen_values/: a.txt  a_test.txt  c.txt  hp.txt  i.txt  main.rs  p.txt  x.txt  x_test.txt
src/nova_nc/: circuit.rs  utils.rs
src/nova_pnc/: circuit.rs
src/nova_por/: circuit.rs  utils.rs
src/nova_rcg/: circuit.rs  utils.rs
